# langchain-camb

./: .gitignore  README.md  pyproject.toml
examples/: 01_basic_tts.py  02_translation.py  03_translated_tts.py  04_langchain_agent.py  05_voice_assistant.py  06_podcast_translator.py  07_sound_generator.py  08_async_batch_processing.py  09_customer_support_bot.py  10_voice_cloning.py  quick_test.py
langchain_camb/: __init__.py  version.py
langchain_camb/toolkits/: __init__.py  camb_toolkit.py
langchain_camb/tools/: __init__.py  audio_separation.py  base.py  text_to_sound.py  transcription.py  translated_tts.py  translation.py  tts.py  voice_clone.py  voice_list.py
tests/: __init__.py
tests/integration/: __init__.py  test_integration.py
tests/integration_tests/: __init__.py  test_tools_standard.py
tests/unit/: __init__.py  test_toolkit.py  test_tools.py
tests/unit_tests/: __init__.py  test_tools_standard.py
